--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -3,3 +3,16 @@
         margin: 0 auto;
         max-width: 1100px;
     }
+
+    h1 {
+        font-size: 2.75rem;
+    }
+
+    h2 {
+        font-size: 0.75rem;
+    }
+
+    p {
+        font-size: 1.35rem;
+        line-height: 1.5rem;
+    }
