--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -15,4 +15,15 @@
     p {
         font-size: 1.35rem;
         line-height: 1.5rem;
+        width: 50%;
+    }
+
+    p.callout {
+        font-size: 2.1rem;
+        line-height: 1.25;
+        font-style: italic;
+    }
+
+    #para1 p {
+        margin: calc(100% / 6);
     }
