--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -22,8 +22,12 @@
         font-size: 2.1rem;
         line-height: 1.25;
         font-style: italic;
+        float: right;
+        padding-left: 2em;
+        margin-top: 0;
+        text-align: left;
     }
 
-    #para1 p {
-        margin: calc(100% / 6);
+    #para1, #para3 p {
+        margin-left: calc(100% / 6);
     }
