--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -5,29 +5,39 @@
     }
 
     h1 {
-        font-size: 2.75rem;
+        font-size: 3.75rem;
+        margin-bottom: 0rem;
     }
 
     h2 {
-        font-size: 0.75rem;
+        font-size: 1.3rem;
     }
 
     p {
         font-size: 1.35rem;
         line-height: 1.5rem;
-        width: 50%;
     }
 
     p.callout {
-        font-size: 2.1rem;
-        line-height: 1.25;
+        font-size: 2.2rem;
+        line-height: 1.2;
         font-style: italic;
         float: right;
         padding-left: 2em;
         margin-top: 0;
-        text-align: left;
+        text-align: right;
+        width: 50%
     }
 
-    #para1, #para3 p {
+    #para3 p {
         margin-left: calc(100% / 6);
+        width: calc(100% * 4 / 6);
+    }
+
+    #para4 p {
+        width: calc(100% * 4 / 6);
+    }
+
+    #para5 p {
+        width: 50%;
     }
