--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -27,17 +27,25 @@
         margin-top: 0;
         text-align: right;
         width: 50%
+        
     }
 
-    #para3 p {
+    #para1 p {
         margin-left: calc(100% / 6);
         width: calc(100% * 4 / 6);
     }
 
-    #para4 p {
-        width: calc(100% * 4 / 6);
+    #para3 p {
+        margin-left: calc(100%  * 2/ 6);
+        width: calc(100% * 3 / 6);
     }
 
-    #para5 p {
-        width: 50%;
+    #para4 p {
+        width: calc(100% * 4 / 6);
+        margin-left: calc(100% / 6);
+    }
+
+    #para6 p {
+        width: calc(100% * 4 / 6);
+        margin-left: calc(100% / 6);
     }
