--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -49,3 +49,19 @@
         width: calc(100% * 4 / 6);
         margin-left: calc(100% / 6);
     }
+
+    #quote2 {
+        font-size: 2.3em;
+    }
+
+    #para8 p {
+        width: calc(100% * 4 / 6);
+        margin-left: calc(100%  * 2/ 6);
+        text-align: right;
+    }
+
+    #para10 p {
+        width: calc(100% * 4 / 6);
+        margin-left: calc(100%  / 6);
+        text-align: left;
+    }
