--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -65,3 +65,15 @@
         margin-left: calc(100%  / 6);
         text-align: left;
     }
+
+    #quote4 p {
+        width: calc(100% * 3 / 6);
+        margin-left: calc(100% * 2 / 6);
+        text-align: center; 
+    }
+
+    #para11 p {
+        width: calc(100% * 4 / 6);
+        margin-left: calc(100% / 6);
+        text-align: left;
+    }
