--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -66,14 +66,15 @@
         text-align: left;
     }
 
-    #quote4 p {
+    #quote4 {
         width: calc(100% * 3 / 6);
         margin-left: calc(100% * 2 / 6);
-        text-align: center; 
+        text-align: center;
+        font-size: 3rem;
+        font-style: italic;
     }
 
     #para11 p {
         width: calc(100% * 4 / 6);
-        margin-left: calc(100% / 6);
         text-align: left;
     }
