--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -78,3 +78,21 @@
         width: calc(100% * 4 / 6);
         text-align: left;
     }
+
+    #para12 p {
+        width: calc(100% * 4 / 6);
+        text-align: left;
+    }
+
+    #para13 p {
+        width: 50%;
+        text-align: left;
+    }
+
+    #para14 p {
+        float: right;
+        padding-left: 2em;
+        margin-top: 0;
+        text-align: right;
+        width: 50%
+    }
