--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -104,7 +104,7 @@
 
     #secondLayout main {
         display: grid;
-        grid-template-columns: repeat(6, auto);
+        grid-template-columns: repeat(6, calc(100% / 6));
         grid-template-rows: repeat(16, auto);
         grid-template-areas: 
             'title title title title title title'
