--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -108,17 +108,17 @@
         grid-template-rows: repeat(16, auto);
         grid-template-areas: 
             'title title title title title title'
-            '. p1 p1 . . .'
-            'p2 p2 . . c1 c1'
-            '. . p3 p3 . .'
+            '. p1 p1 p1 . .'
+            'p2 p2 p2 c1 c1 c1'
+            '. . p3 p3 p3 .'
             '. p4 p4 p4 p4 .'
-            'c2 c2 . . p5 p5'
-            '. p6 p6 . . .'
-            'p7 p7 . . c3 c3'
+            'p5 p5 p5 c2 c2 c2'
+            '. p6 p6 p6 . .'
+            'p7 p7 p7 c3 c3 c3'
             '. . p8 p8 . .'
             '. . . . p9 p9'
             '. c4 c4 c4 c4 .'
-            '. p10 p10 . . .'
+            '. p10 p10 p10 . .'
             '. . p11 p11 p11 p11'
             'p12 p12 . . . .'
             'p13 p13 p13 . . .'
