--- a/anni-albers/styles.css
+++ b/anni-albers/styles.css
@@ -108,14 +108,14 @@
         grid-template-rows: repeat(16, auto);
         grid-template-areas: 
             'title title title title title title'
-            '. p1 p1 p1 . .'
+            '. p1 p1 p1 p1 .'
             'p2 p2 p2 c1 c1 c1'
             '. . p3 p3 p3 .'
             '. p4 p4 p4 p4 .'
-            'p5 p5 p5 c2 c2 c2'
+            'p5 p5 p5 p5 c2 c2'
             '. p6 p6 p6 . .'
-            'p7 p7 p7 c3 c3 c3'
-            '. . p8 p8 . .'
+            'p7 p7 p7 p7 c3 c3'
+            '. . p8 p8 p8 p8'
             '. . . . p9 p9'
             '. c4 c4 c4 c4 .'
             '. p10 p10 p10 . .'
@@ -144,3 +144,8 @@
     #secondLayout #callout2 { grid-area: c2; }
     #secondLayout #callout3 { grid-area: c3; }
     #secondLayout #callout4 { grid-area: c4; }
+
+    #secondLayout p.callout {
+        padding-left: 1rem;
+        width: 100%
+    }
