--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -37,4 +37,20 @@
         font-size: 2.5em;
         width: calc(100vw / 2em);
     }
-    
+
+@media screen and (orientation: landscape) {
+
+    #rhodoPic {
+        width: 50vw;
+    }
+
+    #rhodoTitle {
+        width: 50vw;
+        left: 50vw;
+        background-color: gray;
+    }
+
+    #rhodoTitle h1 {
+        width: 45vw;
+    }
+}
