--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -14,6 +14,11 @@
         width: 100vw;
     }
 
+    @font-face {
+        font-family: 'Ostrich Sans';
+        src: url('fonts/ostrich-sans-bold.ttf');
+    }
+
     #rhodoPic {
         position: absolute;
         width: 100vw;
@@ -36,7 +41,9 @@
         color: white;
         font-size: 2.5em;
         width: calc(100vw / 2em);
+        font-family: 'Ostrich Sans', sans-serif;
     }
+
 
 @media screen and (orientation: landscape) {
 
