--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -41,7 +41,7 @@
         color: white;
         font-size: 2.5em;
         width: calc(100vw / 2em);
-        font-family: 'Ostrich Sans', sans-serif;
+        font-family: 'Arial', sans-serif;
     }
 
 
@@ -54,7 +54,7 @@
     #rhodoTitle {
         width: 50vw;
         left: 50vw;
-        background-color: gray;
+        background-color: rgb(181, 130, 171);
     }
 
     #rhodoTitle h1 {
