--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -4,6 +4,10 @@
         box-sizing: border-box;
     }
 
+    main {
+        background-color: #203013;
+    }
+
     body {
         padding: 0;
         margin: 0;
@@ -37,8 +41,8 @@
         font-size: 2.5em;
         width: calc(100vw / 2em);
         font-family: 'Arial', sans-serif;
+        text-transform: uppercase;
     }
-
 
 @media screen and (orientation: landscape) {
 
