changed font of sectino 1

--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -47,6 +47,7 @@
 
      #sectionOne {
         background-color: #ffecf4;
+        font-family: 'Amatic SC', cursive;
         width: 90vw;
         margin-left: 5vw;
         margin-right: 5vw;
