added in section one

--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -55,6 +55,14 @@
         margin-bottom: 3vh;
     }
 
+    #sectionOne h2 {
+        font-size: 2em;
+    }
+
+    #sectionOne p {
+        font-size: 2em;
+    }
+
 @media screen and (orientation: landscape) {
 
     #rhodoPic {
