fixed the phone pic layout

--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -1,16 +1,15 @@
     #snickerdoodlePic {
-        position: absolute;
-        width: 100vw;
-        height: auto;
+        width: 100%;
+        height: 30vh;
         background-image: url("jessica-johnston-92G0voshUr0-unsplash (1).jpg");
         background-size: cover;
-        background-position: center center;
-        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
-    #rhodoTitle {
-        width: 100vw;
-        height: 20vh;
-        margin-top: 30vh;
-        position: center;
+    #Title h1 {
+        font-size: 2.5em;
+        font-family: 'Arial', sans-serif;
+        text-transform: uppercase;
+        text-align: center;
     }
