--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -1,3 +1,7 @@
+    body {
+        background-color: rgb(229 220 211);
+    }
+    
     #snickerdoodlePic {
         width: 100%;
         height: 30vh;
@@ -12,4 +16,12 @@
         font-family: 'Arial', sans-serif;
         text-transform: uppercase;
         text-align: center;
+        font-weight: bold;
+    }
+
+    #time p {
+        font-weight: bold;
+        font-family: 'Arial', sans-serif;
+        width: 45vw;
+        display: flex;
     }
