--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -42,3 +42,7 @@
         padding-left: 5vw;
         background-color: #d9d0c7;
     }
+
+    @media screen and (orientation: landscape) {
+        
+    }
