--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -69,10 +69,28 @@
         text-align: left;
         margin-left: 3vw;
         background-color: #e5dcd3;
+        margin-bottom: 0;
     }
 
     #time {
         display: none;
     }
+
+    #landscapeTime {
+        display: block;
+        display: flex;
+        text-align: left;
+        padding: 10vw;
+        padding-top: 0;
+        padding-bottom: 0;
+        padding-left: 3vw;
+        gap: 6vw;
+        font-weight: bold;
+        font-family: 'Arial', sans-serif;
+        width: 50vw;
+        font-size: 1em;
+    }
+
+    
         
     }
