--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -5,7 +5,7 @@
     #landscapeTime {
         display: none;
     }
-    
+
     #snickerdoodlePic {
         width: 100%;
         height: 30vh;
@@ -41,56 +41,67 @@
         font-size: 1.5em;
     }
 
-    #ingredients, #directions {
+    #ingredients,
+    #directions {
         font-family: 'Arial', sans-serif;
         padding-left: 5vw;
         background-color: #d9d0c7;
     }
 
     @media screen and (orientation: landscape) {
-        
-    #snickerdoodlePic {
-        width: calc(100vw * 2/5);
-        height: 30vh;
-    }
 
-    header {
-         display: flex;
-         margin-top: 4vw;
-    }
+        #snickerdoodlePic {
+            width: calc(100vw * 2/5);
+            height: 30vh;
+        }
 
-    #Title {
-        width: calc(100vw * 3 / 5);
-        font-size: 1.5em;
-    }
+        header {
+            display: flex;
+            margin-top: 4vw;
+        }
 
-    #Title h1 {
-        margin-top: 0;
-        text-align: left;
-        margin-left: 3vw;
-        background-color: #e5dcd3;
-        margin-bottom: 0;
-    }
+        #Title {
+            width: calc(100vw * 3 / 5);
+            font-size: 1.5em;
+        }
 
-    #time {
-        display: none;
-    }
+        #Title h1 {
+            margin-top: 0;
+            text-align: left;
+            margin-left: 3vw;
+            background-color: #e5dcd3;
+            margin-bottom: 0;
+        }
 
-    #landscapeTime {
-        display: block;
-        display: flex;
-        text-align: left;
-        padding: 10vw;
-        padding-top: 0;
-        padding-bottom: 0;
-        padding-left: 3vw;
-        gap: 6vw;
-        font-weight: bold;
-        font-family: 'Arial', sans-serif;
-        width: 50vw;
-        font-size: 1em;
-    }
+        #time {
+            display: none;
+        }
 
-    
-        
+        #landscapeTime {
+            display: block;
+            display: flex;
+            text-align: left;
+            padding: 10vw;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 3vw;
+            gap: 6vw;
+            font-weight: bold;
+            font-family: 'Arial', sans-serif;
+            width: 50vw;
+            font-size: 1em;
+        }
+
+        main {
+            display: grid;
+            grid-template-columns: repeat(5, calc(100% / 5));
+            grid-template-rows: auto;
+            grid-template-areas:
+                'ingredients ingredients directions directions directions'
+        }
+
+        #ingredients { grid-area: ingredients; }
+        #directions { grid-area: directions; }
+
+
     }
