--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -1,7 +1,10 @@
     body {
         background-color: rgb(229 220 211);
     }
-
+     footer {
+        width: 100vw;
+        text-align: center;
+    }
     #landscapeTime {
         display: none;
     }
@@ -89,10 +92,11 @@
             font-weight: bold;
             font-family: 'Arial', sans-serif;
             width: 50vw;
-            font-size: 1em;
+            font-size: 1.75em;
         }
 
         main {
+            maring-top: 5vh;
             display: grid;
             grid-template-columns: repeat(5, calc(100% / 5));
             grid-template-rows: auto;
@@ -100,8 +104,15 @@
                 'ingredients ingredients directions directions directions'
         }
 
-        #ingredients { grid-area: ingredients; }
-        #directions { grid-area: directions; }
+        #ingredients { 
+            grid-area: ingredients; 
+            font-size: 1.5em; 
+        }
+        
+        #directions { 
+            grid-area: directions; 
+            font-size: 1.4em;
+        }
 
 
     }
