--- a/recipe-mini-site/styles.css
+++ b/recipe-mini-site/styles.css
@@ -150,3 +150,124 @@ nav>ul>li>ul>li:hover a {
     }
 
 }
+
+/* This is CSS for recipe 1, snickerdoodles */
+
+    body {
+        background-color: rgb(229 220 211);
+    }
+     footer {
+        width: 100vw;
+        text-align: center;
+    }
+    #landscapeTime {
+        display: none;
+    }
+
+    #snickerdoodlePic {
+        width: 100%;
+        height: 30vh;
+        background-image: url("jessica-johnston-92G0voshUr0-unsplash (1).jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    #Title h1 {
+        font-size: 2.5em;
+        font-family: 'Arial', sans-serif;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: bold;
+        background-color: #d9d0c7;
+    }
+
+    #time {
+        display: flex;
+        text-align: left;
+        padding: 10vw;
+        padding-top: 0;
+        padding-bottom: 0;
+        gap: 6vw;
+        background-color: #d9d0c7;
+    }
+
+    #time p {
+        font-weight: bold;
+        font-family: 'Arial', sans-serif;
+        width: 50vw;
+        font-size: 1.5em;
+    }
+
+    #ingredients,
+    #directions {
+        font-family: 'Arial', sans-serif;
+        padding-left: 5vw;
+        background-color: #d9d0c7;
+    }
+
+    @media screen and (orientation: landscape) {
+
+        #snickerdoodlePic {
+            width: calc(100vw * 2/5);
+            height: 30vh;
+        }
+
+        header {
+            display: flex;
+            margin-top: 4vw;
+        }
+
+        #Title {
+            width: calc(100vw * 3 / 5);
+            font-size: 1.5em;
+        }
+
+        #Title h1 {
+            margin-top: 0;
+            text-align: left;
+            margin-left: 3vw;
+            background-color: #e5dcd3;
+            margin-bottom: 0;
+        }
+
+        #time {
+            display: none;
+        }
+
+        #landscapeTime {
+            display: block;
+            display: flex;
+            text-align: left;
+            padding: 10vw;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 3vw;
+            gap: 6vw;
+            font-weight: bold;
+            font-family: 'Arial', sans-serif;
+            width: 50vw;
+            font-size: 1.75em;
+        }
+
+        main {
+            margin-top: 5vh;
+            display: grid;
+            grid-template-columns: repeat(5, calc(100% / 5));
+            grid-template-rows: auto;
+            grid-template-areas:
+                'ingredients ingredients directions directions directions'
+        }
+
+        #ingredients { 
+            grid-area: ingredients; 
+            font-size: 1.5em; 
+        }
+        
+        #directions { 
+            grid-area: directions; 
+            font-size: 1.4em;
+        }
+
+
+    }
