--- a/recipe-mini-site/styles.css
+++ b/recipe-mini-site/styles.css
@@ -153,18 +153,18 @@ nav>ul>li>ul>li:hover a {
 
 /* This is CSS for recipe 1, snickerdoodles */
 
-    body {
+    #recipe-1 body {
         background-color: rgb(229 220 211);
     }
-     footer {
+    #recipe-1  footer {
         width: 100vw;
         text-align: center;
     }
-    #landscapeTime {
+    #recipe-1 #landscapeTime {
         display: none;
     }
 
-    #snickerdoodlePic {
+    #recipe-1 #snickerdoodlePic {
         width: 100%;
         height: 30vh;
         background-image: url("jessica-johnston-92G0voshUr0-unsplash (1).jpg");
@@ -173,7 +173,7 @@ nav>ul>li>ul>li:hover a {
         background-repeat: no-repeat;
     }
 
-    #Title h1 {
+    #recipe-1  #Title h1 {
         font-size: 2.5em;
         font-family: 'Arial', sans-serif;
         text-transform: uppercase;
@@ -182,7 +182,7 @@ nav>ul>li>ul>li:hover a {
         background-color: #d9d0c7;
     }
 
-    #time {
+    #recipe-1 #time {
         display: flex;
         text-align: left;
         padding: 10vw;
@@ -192,15 +192,15 @@ nav>ul>li>ul>li:hover a {
         background-color: #d9d0c7;
     }
 
-    #time p {
+    #recipe-1 #time p {
         font-weight: bold;
         font-family: 'Arial', sans-serif;
         width: 50vw;
         font-size: 1.5em;
     }
 
-    #ingredients,
-    #directions {
+    #recipe-1 #ingredients,
+    #recipe-1 #directions {
         font-family: 'Arial', sans-serif;
         padding-left: 5vw;
         background-color: #d9d0c7;
@@ -208,22 +208,22 @@ nav>ul>li>ul>li:hover a {
 
     @media screen and (orientation: landscape) {
 
-        #snickerdoodlePic {
+        #recipe-1 #snickerdoodlePic {
             width: calc(100vw * 2/5);
             height: 30vh;
         }
 
-        header {
+        #recipe-1 header {
             display: flex;
             margin-top: 4vw;
         }
 
-        #Title {
+        #recipe-1 #Title {
             width: calc(100vw * 3 / 5);
             font-size: 1.5em;
         }
 
-        #Title h1 {
+        #recipe-1 #Title h1 {
             margin-top: 0;
             text-align: left;
             margin-left: 3vw;
@@ -231,11 +231,11 @@ nav>ul>li>ul>li:hover a {
             margin-bottom: 0;
         }
 
-        #time {
+        #recipe-1 #time {
             display: none;
         }
 
-        #landscapeTime {
+        #recipe-1 #landscapeTime {
             display: block;
             display: flex;
             text-align: left;
@@ -250,7 +250,7 @@ nav>ul>li>ul>li:hover a {
             font-size: 1.75em;
         }
 
-        main {
+        #recipe-1 main {
             margin-top: 5vh;
             display: grid;
             grid-template-columns: repeat(5, calc(100% / 5));
@@ -259,12 +259,12 @@ nav>ul>li>ul>li:hover a {
                 'ingredients ingredients directions directions directions'
         }
 
-        #ingredients { 
+        #recipe-1 #ingredients { 
             grid-area: ingredients; 
             font-size: 1.5em; 
         }
         
-        #directions { 
+        #recipe-1 #directions { 
             grid-area: directions; 
             font-size: 1.4em;
         }
