--- a/recipe-mini-site/styles.css
+++ b/recipe-mini-site/styles.css
@@ -13,6 +13,10 @@
     box-sizing: border-box;
 }
 
+main {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     margin: 0;
     padding: var(--nav-height) 0 0 0;
