--- a/recipe-mini-site/styles.css
+++ b/recipe-mini-site/styles.css
@@ -207,7 +207,7 @@ nav>ul>li>ul>li:hover a {
         background-image: url("Fudge\ Puddles.png");
     }
 
-    #recipe-2 SmoresPic {
+    #recipe-2 #SmoresPic {
         background-image: url(smores\ coookies.png);
     }
 
