fixed the css on the song titles, ready to work on sections

--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -171,7 +171,8 @@ nav>ul>li>ul>li:hover a {
     margin: 0;
     padding: var(--nav-height) 0 0 0;
     background-color: #c7b59a;
-    height: 100vw;
+    height-min: 100vh;
+    padding-bottom: 20vh;
     width: 100%;
 }
 
@@ -179,24 +180,44 @@ footer {
     font-family: 'Fraunces', serif;
     padding: 1vw;
     text-align: center;
-    background-color: #9a9585;
+    background-color: #322e23;
+    color: white;
 }
 
-.albums h2 {
+.albums h2,
+.songs h2 {
     width: 100%;
 }
 
-.albums {
+.albums, .songs {
     display: flex;            
     justify-content: space-between; 
     flex-wrap: wrap;          
-    gap: 10px;                
+    gap: 1vw;     
 }
 
-.album {
+.songs {
+    margin: 7vh 0 0 0;
+}
+
+.songs h2 {
+    font-size: 2.5em;
+}
+
+.album, .song {
     text-align: center;
     transition: 1s;
     width: 18%;               
+}
+
+.song {
+    width: 30%;
+    background-color: #322e23;
+    color: white;
+}
+
+.albums {
+    font-size: 1.3em;
 }
 
 .album img {
@@ -208,4 +229,12 @@ footer {
     transition: 1s;
     font-size: 2em;
     width: 20%;
+}
+
+.song:hover {
+    transition: 1s;
+    font-size: 1.3em;
+    width: 35%;
+    background-color: #91836f;
+    color: black;
 }
