ok brought back the div for image

--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -238,3 +238,7 @@ footer {
     background-color: #91836f;
     color: black;
 }
+
+.hurtSomebody .albumcover {
+    background-image: url("hurt-somebody_cover.jpg")
+}
