fixed typo, sizing

--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -254,18 +254,18 @@ footer {
 }
 
 .hurtSomebody div{
-    width: 45vw;'    
+    width: 45vw;    
 }
 
 .tracklist ul {
     list-style: none;
     line-height: 4vh;
-    font-size: 1.3em;
 }
 
 .tracklist {
     text-align: right;
     transition: 1s;
+    font-size: 2em;
 }
 
 .albumcover img {
@@ -292,6 +292,10 @@ footer {
     ul {
         line-height: 5vh;
     }
-    background-color: #17797180;
+    background-color: rgba(23, 121, 113, 0.5);
 
+}
+
+.tracklist:hover {
+    font-size: 2.5em;
 }
