--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -241,7 +241,8 @@ footer {
 
 
 
-.hurtSomebody, .capeElizabeth, .iWasIAm {
+.hurtSomebody, .capeElizabeth, .iWasIAm,
+.busyhead {
     background-color: #130504;
     color: #e6e6e6;
     font-family: 'Fraunces', serif;
@@ -261,9 +262,14 @@ footer {
     background-color: #010b14;
 }
 
+.busyhead {
+    background-color: #082e41;
+}
+
 .hurtSomebody div,
 .capeElizabeth div,
-.iWasIAm div {
+.iWasIAm div,
+.busyhead div {
     width: 45vw;    
 }
 
@@ -320,6 +326,14 @@ footer {
 .iWasIAm .favSong:hover {
     background-color: rgb(134 152 192 / 40%);
 
+}
+
+.busyhead .tracklist:hover,
+.busyhead .facts:hover, 
+.busyhead .thoughts:hover,
+.busyhead .favSong:hover {
+    background-color: rgb(252 215 72 / 80%);
+    color: black;
 }
 
 .tracklist:hover {
