--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -350,3 +350,56 @@ footer {
 .tracklist:hover {
     font-size: 2.5em;
 }
+
+/* Favorite song section */
+
+.viewBetween {
+    background-color: #3f4033;
+    color: white;
+    font-family: 'Fraunces', serif;
+    text-align: center;
+    transition: 1s;
+    padding-bottom: 10vh;
+}
+
+.viewBetween header {
+    padding-top: 10vh;
+    font-size: 2.4em;
+}
+
+.lyrics h2, .reason h2 {
+    font-size: 3em;
+}
+
+.lyrics p, .reason p{
+    font-size: 1.3em;
+    transition: 1s;
+}
+
+.lyrics p:hover {    
+    font-size: 1.8em;
+    transition: 1s;
+}
+
+.link {
+    margin-top: 7vh;
+    color: white;
+    background-color: 
+    
+}
+
+a:link {
+    color: #ffffff;
+    transition: 1s;
+}
+
+a:visited {
+    color: #ffffff;
+    transition: 1s;
+}
+
+a:hover {
+    background-color: #322e23;
+    font-size: 1.5em;
+    transition: 1s;
+}
