--- a/major-project/styles.css
+++ b/major-project/styles.css
@@ -353,7 +353,7 @@ footer {
 
 /* Favorite song section */
 
-.viewBetween {
+.viewBetween, .northernAttitude {
     background-color: #3f4033;
     color: white;
     font-family: 'Fraunces', serif;
@@ -362,7 +362,8 @@ footer {
     padding-bottom: 10vh;
 }
 
-.viewBetween header {
+.viewBetween header,
+.northernAttitude header {
     padding-top: 10vh;
     font-size: 2.4em;
 }
@@ -376,6 +377,10 @@ footer {
     transition: 1s;
 }
 
+.reason p {
+    padding: 0 10vw 0 10vw;
+}
+
 .lyrics p:hover {    
     font-size: 1.8em;
     transition: 1s;
@@ -386,17 +391,17 @@ footer {
     color: white;
 }
 
-a:link {
+.link a:link {
     color: #ffffff;
     transition: 1s;
 }
 
-a:visited {
+.link a:visited {
     color: #ffffff;
     transition: 1s;
 }
 
-a:hover {
+.link a:hover {
     background-color: #322e23;
     font-size: 1.5em;
     transition: 1s;
